# gro-redux

./: .appveyor.yml  .gitignore  About.cpp  About.h  Ansel.h  AppInfo.cpp  AppInfo.h  BigView.cpp  BigView.h  BirthCalc.cpp  BirthCalc.h  CMakeLists.txt  ChildFrm.cpp  ChooseFont.cpp  ChooseFont.h  ConfirmDelete.cpp  ConfirmDelete.h  Connect.cpp  Connect.h  DateValue.cpp  DateValue.h  DlgWebServer.cpp  DlgWebServer.h  Dlgsavechanges.cpp  Dlgsavechanges.h  DocSize.cpp  DocSize.h  EditCitation.cpp  EditCitation.h  EditDate.cpp  EditDate.h  EditEvent.cpp  EditEvent.h  EditName.cpp  EditName.h  EditRepo.cpp  EditRepo.h  EditSex.cpp  EditSex.h  EditSource.cpp  (+105 more)
.github/workflows/: publish.yaml
Res/: Gedtree.rc2  menudef.h
archive/misc/: ad1.txt  bib.rtf  default.asp  head.rtf  indi.rtf  indi.tpl  sour.rtf  sour.tpl
docs/: _config.yml  index.md  releasenotes.md
